# python_class

./: README.md
class2/: data_type_list.py  data_type_map.py  data_type_set.py  data_type_string.py  data_type_tuple.py
class3/: conditions.py  conditions2.py
class4/: conditions.py  for_loop.py  while_loop.py
class5/: age_calculator.py  converter.py  full_function.py  function_caller.py
class6/: README.md  pyproject.toml
class6/functions_by_sercantopcu/: math_functions.py
class7/: data.json  instructor1_data  json_parser_function.py
class8/: iam_tag.py
test/: test.py
