[tool.poetry]
name = "functions-by-sercantopcu"
version = "0.3.0"
description = "This is our test project"
authors = ["somename <sercantopcu1@icloud.com>"]
readme = "README.md"
packages = [{include = "functions_by_sercantopcu"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
